--- a/src/css/components/form.scss
+++ b/src/css/components/form.scss
@@ -241,7 +241,7 @@
       margin-top: rem(24);
 
       .tuf-footer__social {
-        margin-bottom: rem(24);
+        margin-bottom: rem(64);
       }
     }
   }
